# Tear

./: .gitignore  CMakeLists.txt  README.md  todo.md
mainLauncher/: CMakeLists.txt
resources/: .gitignore  Paterns.xml
src/: CMakeLists.txt
src/include/: Basic_Projectile.h  Basic_Tear.h  Game.hpp  GameObject.h  Goal.h  Guided_Projectile.h  Guided_Tear.h  Level.h  Menu.h  Patern.h  Player.h  Projectile.h  Projectile_Basic.h  Projectile_Guided.h  ResourceManager.h  River_Tear.h  Shop.h  Tear.h  Tear_Basic.h  Tear_Guided.h  Tear_River.h
src/include/GameObjects/: GameObject.h  Player.h
src/include/GameObjects/Projectiles/: Projectile.h  Projectile_Basic.h  Projectile_Guided.h
src/include/GameObjects/Tears/: Tear.h  Tear_Basic.h  Tear_Guided.h  Tear_River.h
src/include/Scenes/: Level.h  Menu.h  Scene.h  Shop.h  Victory.h
src/source/: Basic_Projectile.cpp  Basic_Tear.cpp  Game.cpp  GameObject.cpp  Goal.cpp  Guided_Projectile.cpp  Guided_Tear.cpp  Level.cpp  Level.hpp  Menu.cpp  Patern.cpp  Player.cpp  Projectile.cpp  Projectile_Basic.cpp  Projectile_Guided.cpp  ResourceManager.cpp  River_Tear.cpp  Shop.cpp  Tear.cpp  Tear_Basic.cpp  Tear_Guided.cpp  Tear_River.cpp  myMain.cpp
src/source/GameObjects/: GameObject.cpp  Player.cpp
src/source/GameObjects/Projectiles/: Projectile.cpp  Projectile_Basic.cpp  Projectile_Guided.cpp
src/source/GameObjects/Tears/: Tear.cpp  Tear_Basic.cpp  Tear_Guided.cpp  Tear_River.cpp
src/source/Scenes/: Level.cpp  Menu.cpp  Scene.cpp  Shop.cpp  Victory.cpp
unitTests/: CMakeLists.txt  unitTests.cpp
